<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/your_lists"
        android:checkableBehavior="none"
        android:orderInCategory="100">


        <item
            android:id="@+id/your_lists_item"
            android:checkable="false"
            android:title="@string/your_lists"
            app:itemTextAppearance="@color/green_text">

        </item>
    </group>
    <group
        android:id="@+id/shared_lists"
        android:checkableBehavior="none"
        android:orderInCategory="1000">
        <item
            android:id="@+id/shared_lists_item"
            android:checkable="false"
            android:title="@string/shared_lists"
            app:itemTextAppearance="@color/green_text" />

    </group>


    <item
        android:id="@+id/create_list"
        android:orderInCategory="2000"
        android:title="@string/new_list" />

    <item
        android:orderInCategory="2200"
        android:title="@string/preferences"
        app:itemTextAppearance="@color/green_text">
        <menu>
            <group
                android:id="@+id/your_preferences"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/light_theme"
                    android:title="@string/light" />
                <item
                    android:id="@+id/dark_theme"
                    android:title="@string/dark" />

            </group>
        </menu>
    </item>
    <item
        android:id="@+id/delete_all_lists"
        android:orderInCategory="2500"
        android:title="@string/delete_all_lists" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="3000"
        android:title="@string/logout" />


</menu>