<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_fragment_header"
    android:layout_width="match_parent"
    android:layout_height="171dp"
    android:background="@drawable/fragment_list_header_background"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:showIn="@layout/fragment_current_list">

    <TextView
        android:id="@+id/username"
        style="@style/medium_heading15sp"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/date"
        style="@style/medium_heading15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="5dp"
        android:text="@string/header_date"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/category"
        style="@style/medium_heading15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="5dp"
        android:text="@string/category_name" />

    <TextView
        android:id="@+id/private_header"
        style="@style/medium_heading15sp"
        android:layout_width="57dp"
        android:layout_height="18dp"
        android:layout_above="@+id/delete_list"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="341dp"
        android:layout_marginLeft="341dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="75dp"
        android:gravity="end"
        android:text="@string/header_private_field"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/finish_by_toolbar"
        style="@style/medium_heading15sp"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="16dp"
        android:text="@string/finish_by_default"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/delete_list"
        android:layout_width="70dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="335dp"
        android:layout_marginLeft="335dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:contentDescription="@string/delete_list"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</RelativeLayout>